# Quantum-well-calculator

./: CMakeLists.txt  LICENSE.md  README.md  bisekcja.cpp  studnia  studnia.cpp
include/: bisekcja.h  mainwindow.h  studnia.h
src/: bisekcja.cpp  main.cpp  mainwindow.cpp  mainwindow.ui  studnia.cpp
